fix cover button align in firefox

--- a/app/styles/editor/title_block.scss
+++ b/app/styles/editor/title_block.scss
@@ -23,10 +23,11 @@
 }
 
 .title_block__cover_handler_wrapper {
-  width: calc(100% - #{$padding}*2);
+  width: 100%;
   text-align: center;
   position: absolute;
   top: 25px;
+  left: 0;
 }
 
 .title_block__cover_handler {
